--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "rchavik/croogo-surveys",
+    "name": "vamshop/surveys",
     "type": "cakephp-plugin",
-    "description": "Croogo Survey Plugin",
-    "homepage": "http://github.com/rchavik/Croogo-surveys",
+    "description": "VamShop Survey Plugin",
+    "homepage": "http://github.com/vamshop/surveys",
     "license": "MIT",
     "require": {
         "php": ">=5.6.0",
-        "croogo/croogo": "3.0.x-dev"
+        "vamshop/vamshop-core": "3.0.x-dev"
     },
     "autoload": {
         "psr-4": {
